--- a/src/components/NotePage/CardColumn/styles.scss
+++ b/src/components/NotePage/CardColumn/styles.scss
@@ -13,7 +13,7 @@ $backgroundColor: #F4F6FA;
     border-radius: 5px;
     @include padding(0.5rem);
     gap: 0.5rem;
-    margin-bottom: 0.5rem;
+    margin-bottom: 0.1rem;
     font-family: 'Nunito', 'Roboto';
 
     &__header, &__footer {
