--- a/src/components/NotePage/NoteTable/styles.scss
+++ b/src/components/NotePage/NoteTable/styles.scss
@@ -3,7 +3,8 @@
 
 .note-table {
     width: 100%;
-    height: calc(100vh - #{$headerHeigh} - $noteTableHeaderHeight);
+    height: auto;
+    // height: auto;
     margin-top: headerHeigh;
     // background-color: red;
     @include displayFlex(column, nowrap, flex-start);
@@ -18,7 +19,6 @@
         font-family: 'Roboto';
         font-weight: 500;
         color: $black-text-color-4;
-        line-height: 55px;
 
         * { margin: 0 }
 
@@ -44,11 +44,10 @@
         gap: 0.5rem;
     }
     &__content {
-        height: calc(100% - #{$noteTableHeaderHeight * 2});
+        height: calc(100% - #{$noteTableHeaderHeight} - #{$headerHeigh});
         width: 100%;
         background: $light-silver-1;
-        @include padding(0.5rem 1rem);
-        padding-bottom: 0;
+        @include padding(0 1rem);
         padding-bottom: 0;
         @include displayFlex(row, nowrap, flex-start, flex-start);
         gap: 0.5rem;
@@ -58,7 +57,7 @@
 
         &::-webkit-scrollbar{
             -webkit-appearance: none;
-            height: 20px;
+            height: 15px;
         }
         &::-webkit-scrollbar-thumb{
             border-bottom: 3px solid white;
