--- a/src/components/NotePage/styles.scss
+++ b/src/components/NotePage/styles.scss
@@ -1,5 +1,6 @@
 @import 'assets/scss/variables';
+
 .note-page {
-    height: calc(100% - $headerHeigh);
+    height: calc(100% - #{$headerHeigh});
     width: 100%;
 }
